deploy/k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rwatch-web
  namespace: rwatch-web
  labels:
    app: rwatch-web
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rwatch-web.davidcode2.com
      secretName: rwatch-web-tls
  rules:
    - host: rwatch-web.davidcode2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rwatch-web
                port:
                  number: 80
